# proofler

./: .gitignore  BENCHMARKS.md  BUGS.md  CLAUDE.md  README.md  ROADMAP.md  justfile  pyproject.toml
specs/: m10-laneler.md  m11-laneler-balance.md  m2-order-pipeline.md  m3-procler-integration.md  m4-upgrade-validation.md  m6-dagler-integration.md  m7-dagler-scale.md  m8-dagler-limits.md
tests/: _benchmark_multi_worker.sh  _benchmark_suite.sh  balance_report.json  koyeb_budget.py  laneler_balance.py  laneler_bot.py  stress.py  test_laneler.py  test_stack.py  worker_harness.py
tests/laneler/: __init__.py  __main__.py  app.py  auth.py  balance.py  bot.py  engine.py  models.py  nicknames.py  tick.py
tests/laneler/static/: index.html
